# back

./: .gitignore  Dockerfile  README.md  conftest.py  db.json  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: infrastructure.yml
api/: serializers.py  urls.py  views.py
countries/: models.py  serializers.py  views.py
countries/management/commands/: import_cities.py  (+1 more)
countries/migrations/: 0001_initial.py
landing/: admin.py  apps.py  models.py  serializers.py  views.py
landing/migrations/: 0001_initial.py  0002_alter_project_cost_alter_project_dimension_depth_and_more.py  0003_remove_respondent_activity_type_and_more.py  0004_rename_project_landingproject_and_more.py  0005_alter_projectimage_image_and_more.py  0006_sculptureorder.py
models/: settings.py  urls.py
projects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
pytest_tests/: test_main_page.py  test_registration.py
static_pages/: admin.py  apps.py  models.py
static_pages/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_communicationmethod_options_and_more.py  0002_alter_user_country.py  0002_style_userinfo_about_en_userinfo_about_ru_and_more.py  0003_alter_user_communication_method.py  0003_alter_user_managers_remove_user_username.py  0004_alter_user_communication_method.py  0005_alter_user_communication_method_alter_user_country.py  0006_alter_user_communication_method.py
(+2 files in other folders)
