[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["databorodata <nboldyrev90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-imagekit = "^5.0.0"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
